tests/NormalTests/paczka2/big_fuzzy/83995507.err
Error in line 5: S389 S462 100,0
Error in line 9: na8icg S462 85,8
Error in line 11: na8icg S463 19,1
Error in line 29: Uetjn S463 64,6
Error in line 31: S389 S73 75,9
Error in line 26: pIRLc S389 72,2
Error in line 37: pIRLc S463 98,0
Error in line 25: na8icg S73 23,8
Error in line 45: Uetjn S463 90,8
Error in line 50: eCxEmFlpgu S462 77,2
Error in line 46: S389 S462 131,6
Error in line 42: pIRLc S389 43,7
Error in line 61: ST5K7ok0p S463 46,1
Error in line 64: ST5K7ok0p S73 42,5
Error in line 75: hVq2 S389 91,2
Error in line 73: pIRLc S463 72,1
Error in line 93: ST5K7ok0p S389 1,3
Error in line 107: S389 S463 70,3
Error in line 114: na8icg S389 40,4
Error in line 119: eCxEmFlpgu S462 73,7
Error in line 131: pIRLc S463 64,3
Error in line 150: ST5K7ok0p S389 3,5
Error in line 156: ST5K7ok0p S73 5,8
Error in line 157: ST5K7ok0p S463 24,7
Error in line 171: pIRLc S463 25,8
Error in line 177: eCxEmFlpgu S73 6,5
Error in line 181: eCxEmFlpgu S462 32,0
Error in line 175: pIRLc S93 49,1
Error in line 195: Uetjn S462 45,5
Error in line 193: na8icg S389 20,0
Error in line 186: pIRLc S73 214,8
Error in line 206: Uetjn S73 29,6
Error in line 213: Uetjn S389 92,0
Error in line 216: ST5K7ok0p S462 33,0
Error in line 224: ST5K7ok0p S389 69,5
Error in line 230: eCxEmFlpgu S462 50,9
Error in line 231: eCxEmFlpgu S73 23,3
Error in line 232: pIRLc S463 177,6
Error in line 208: hVq2 S73 0,5
Error in line 222: S389 S463 84,5
Error in line 242: S389 S73 5,1
Error in line 243: S389 S389 57,5
